@@ -28,11 +28,16 @@ public class SecurityConfig {
 
                 // 3. Cấu hình phân quyền đường dẫn
                 .authorizeHttpRequests(auth -> auth
+                        // Cho phép truy cập H2 Console
+                        .requestMatchers("/h2-console/**").permitAll()
                         // Mở cửa hoàn toàn cho các API liên quan đến Authentication (Đăng ký, Đăng
                         // nhập)
                         .requestMatchers("/api/auth/**").permitAll()
                         // Bất kỳ request nào khác tạm thời mở ra để chúng ta dễ test giao diện gốc
                         .anyRequest().permitAll())
+
+                // Cho phép hiển thị iframe cho H2 console
+                .headers(headers -> headers.frameOptions(frame -> frame.disable()))
 
                 // 4. Đưa Session về chế độ STATELESS (Không dùng Session dính liền giao diện
                 // nữa)
@@ -46,9 +51,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // Cho phép mọi nguồn (bao gồm file HTML của bạn)
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Cache-Control"));
+        configuration.setAllowedOriginPatterns(List.of("*")); // Thay đổi thành AllowedOriginPatterns
+        configuration.setAllowedMethods(List.of("*")); // Cho phép mọi method
+        configuration.setAllowedHeaders(List.of("*")); // Cho phép mọi header
+        configuration.setAllowCredentials(true); // Nếu frontend có dùng cookie/session (optional)
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
